--- a/index.html
+++ b/index.html
@@ -161,10 +161,8 @@
         </a>
     </div>
     <div class="container">
-        <h1>
-            <p class="text-success intro">Intro</p>
-            <p class="text-primary intro">duction</p>
-        </h1>
+       <p class="h1 intro text-primary">Intro</p>
+       <p class="h1 intro text-success">duction</p>
     </div>
     <div class="container">
         <p class="text-success font-weight-bolder">____________ &emsp;</p>
